sandbox endpoints in platform-ctrl + 2-phase virt-engine sandbox & scenario activation + frontend REST call updates

--- a/charts/core/meep-virt-engine/templates/deployment.yaml
+++ b/charts/core/meep-virt-engine/templates/deployment.yaml
@@ -46,6 +46,9 @@ spec:
           ports:
             - containerPort: {{ .Values.deployment.port }}
               protocol: {{ .Values.deployment.protocol }}
+          env:
+            - name: MEEP_ROOT_URL
+              value: {{ .Values.image.env.rooturl }}
           volumeMounts:
             - name: data
               mountPath: /data/
