--- a/charts/sandbox/meep-metrics-engine/values-template.yaml
+++ b/charts/sandbox/meep-metrics-engine/values-template.yaml
@@ -14,6 +14,7 @@ image:
   tag: latest
   pullPolicy: Always
   env:
+    sandboxName: {{ .SandboxName }}
     rooturl: "http://www.example.com"
 
 service:
@@ -28,14 +29,14 @@ ingress:
   hosts:
     - name: ''
       paths:
-        - /metrics
+        - /({{ .SandboxName }}/|)metrics
 
   annotations:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
-    # nginx.ingress.kubernetes.io/configuration-snippet: |
-    #   rewrite ^/metrics(/|$)(.*)$ /$2 break;
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^/{{ .SandboxName }}/metrics(/|$)(.*)$ /metrics/$2 break;
 
   labels: {}
   tls:
