--- a/charts/sandbox/meep-mg-manager/values-template.yaml
+++ b/charts/sandbox/meep-mg-manager/values-template.yaml
@@ -21,7 +21,9 @@ image:
   repository: meep-docker-registry:30001/meep-mg-manager
   tag: latest
   pullPolicy: Always
-
+  env:
+    sandboxName: {{ .SandboxName }}
+    
 service:
   name: meep-mg-manager
   type: ClusterIP
@@ -34,14 +36,14 @@ ingress:
   hosts:
     - name: ''
       paths:
-        - /mgm
+        - /({{ .SandboxName }}/|)mgm
 
   annotations:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
-    # nginx.ingress.kubernetes.io/configuration-snippet: |
-    #   rewrite ^/metrics(/|$)(.*)$ /$2 break;
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^/{{ .SandboxName }}/mgm(/|$)(.*)$ /mgm/$2 break;
 
   labels: {}
   tls:
