--- a/charts/sandbox/meep-sandbox-ctrl/values-template.yaml
+++ b/charts/sandbox/meep-sandbox-ctrl/values-template.yaml
@@ -18,9 +18,11 @@ affinity:
           operator: Exists
           
 image:
-  repository: meep-sandbox-ctrl
+  repository: meep-docker-registry:30001/meep-sandbox-ctrl
   tag: latest
   pullPolicy: Always
+  env:
+    sandboxName: {{ .SandboxName }}
 
 service:
   type: ClusterIP
@@ -33,14 +35,14 @@ ingress:
   hosts:
     - name: ''
       paths:
-        - /sandbox-ctrl
+        - /({{ .SandboxName }}/|)sandbox-ctrl
 
   annotations:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
-    # nginx.ingress.kubernetes.io/configuration-snippet: |
-    #   rewrite ^(/api)$ $1/ redirect;
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^/{{ .SandboxName }}/sandbox-ctrl(/|$)(.*)$ /sandbox-ctrl/$2 break;
 
   labels: {}
   tls:
