httplogger as a package for all services

--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -166,6 +166,9 @@ repo:
     meep-logger:
       src: go-packages/meep-logger
       lint: true
+    meep-http-logger:
+      src: go-packages/meep-http-logger
+      lint: true
     meep-metric-store:
       src: go-packages/meep-metric-store
       lint: true
