--- a/charts/sandbox/meep-rnis/values-template.yaml
+++ b/charts/sandbox/meep-rnis/values-template.yaml
@@ -2,7 +2,6 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-namespace: default
 serviceAccount: meep-rnis
 
 deployment:
@@ -11,13 +10,15 @@ deployment:
   protocol: TCP
 
 image:
-  repository: meep-rnis
+  repository: meep-docker-registry:30001/meep-rnis
   tag: latest
   pullPolicy: Always
   env:
-    rooturl: "http://www.example.com"
+    sandboxName: {{ .SandboxName }}
+    rooturl: {{ .RootUrl }}
 
 service:
+  name: meep-rnis
   type: ClusterIP
   port: 80
 
@@ -28,14 +29,14 @@ ingress:
   hosts:
     - name: ''
       paths:
-        - /rni
+        - /({{ .SandboxName }}/|)rni
 
   annotations:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
-    # nginx.ingress.kubernetes.io/configuration-snippet: |
-    #   rewrite ^/rni(/|$)(.*)$ /$2 break;
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^/{{ .SandboxName }}/rni(/|$)(.*)$ /rni/$2 break;
 
   labels: {}
   tls:
