--- a/charts/grafana/values.yaml
+++ b/charts/grafana/values.yaml
@@ -378,6 +378,12 @@ dashboards:
       file: dashboards/network-metrics-point-to-point.json
     network-metrics-aggregation:
       file: dashboards/network-metrics-aggregation.json
+    http-single-log:
+      file: dashboards/http-log-byId.json
+    http-logs-aggregation:
+      file: dashboards/http-loggers.json
+
+
   #   some-dashboard:
   #     json: |
   #       $RAW_JSON
