added omt dependency

--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -1,5 +1,5 @@
 # Copyright (c) 2019  InterDigital Communications, Inc
-# 
+#
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -169,6 +169,8 @@ repo:
       chart: charts/nginx-ingress
     meep-redis:
       chart: charts/redis
+    meep-open-map-tiles:
+      chart: charts/open-map-tiles
 
   #------------------------------
   #  Packages
