--- a/go-apps/meep-sandbox-ctrl/Dockerfile
+++ b/go-apps/meep-sandbox-ctrl/Dockerfile
@@ -14,4 +14,9 @@
 
 FROM debian:9.6-slim
 COPY ./meep-sandbox-ctrl /meep-sandbox-ctrl
-ENTRYPOINT ["/meep-sandbox-ctrl"]
+COPY ./swagger /swagger
+COPY ./entrypoint.sh /entrypoint.sh
+
+RUN chmod +x /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
