--- a/charts/meep-metrics-engine/values-template.yaml
+++ b/charts/meep-metrics-engine/values-template.yaml
@@ -14,8 +14,8 @@ image:
   tag: latest
   pullPolicy: Always
   env:
-    sandboxName: {{ .SandboxName }}
-    rooturl: "http://www.example.com"
+    MEEP_SANDBOX_NAME: {{ .SandboxName }}
+    MEEP_HOST_URL: {{ .HostUrl }}
 
 service:
   name: meep-metrics-engine
@@ -29,7 +29,7 @@ ingress:
   hosts:
     - name: ''
       paths:
-        - /({{ .SandboxName }}/|)metrics
+        - /{{ .SandboxName }}/metrics
 
   annotations:
     # kubernetes.io/ingress.class: nginx
