--- a/charts/meep-rnis/values-template.yaml
+++ b/charts/meep-rnis/values-template.yaml
@@ -14,8 +14,8 @@ image:
   tag: latest
   pullPolicy: Always
   env:
-    sandboxName: {{ .SandboxName }}
-    rooturl: {{ .RootUrl }}
+    MEEP_SANDBOX_NAME: {{ .SandboxName }}
+    MEEP_HOST_URL: {{ .HostUrl }}
 
 service:
   name: meep-rnis
@@ -29,7 +29,7 @@ ingress:
   hosts:
     - name: ''
       paths:
-        - /({{ .SandboxName }}/|)rni
+        - /{{ .SandboxName }}/rni
 
   annotations:
     # kubernetes.io/ingress.class: nginx
