--- a/charts/meep-sandbox-ctrl/templates/deployment.yaml
+++ b/charts/meep-sandbox-ctrl/templates/deployment.yaml
@@ -40,8 +40,10 @@ spec:
             - containerPort: {{ .Values.deployment.port }}
               protocol: {{ .Values.deployment.protocol }}
           env:
-            - name: MEEP_SANDBOX_NAME
-              value: {{ .Values.image.env.sandboxName }}
+            {{- range $key, $value := .Values.image.env }}
+            - name: {{ $key }}
+              value: {{ $value }}
+            {{- end }}
           {{- if .Values.codecov.enabled}}
           volumeMounts:
           - name: codecov-storage
