--- a/charts/meep-sandbox-ctrl/values-template.yaml
+++ b/charts/meep-sandbox-ctrl/values-template.yaml
@@ -22,7 +22,8 @@ image:
   tag: latest
   pullPolicy: Always
   env:
-    sandboxName: {{ .SandboxName }}
+    MEEP_SANDBOX_NAME: {{ .SandboxName }}
+    MEEP_HOST_URL: {{ .HostUrl }}
 
 service:
   type: ClusterIP
@@ -35,13 +36,16 @@ ingress:
   hosts:
     - name: ''
       paths:
-        - /({{ .SandboxName }}/|)sandbox-ctrl
+        - /{{ .SandboxName }}/api
+        - /{{ .SandboxName }}/sandbox-ctrl
 
   annotations:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^/{{ .SandboxName }}/api$ /{{ .SandboxName }}/api/ permanent;
+      rewrite ^/{{ .SandboxName }}/api(/|$)(.*)$ /api/$2 break;
       rewrite ^/{{ .SandboxName }}/sandbox-ctrl(/|$)(.*)$ /sandbox-ctrl/$2 break;
 
   labels: {}
