--- a/charts/meep-virt-engine/templates/deployment.yaml
+++ b/charts/meep-virt-engine/templates/deployment.yaml
@@ -47,8 +47,10 @@ spec:
             - containerPort: {{ .Values.deployment.port }}
               protocol: {{ .Values.deployment.protocol }}
           env:
-            - name: MEEP_ROOT_URL
-              value: {{ .Values.image.env.rooturl }}
+            {{- range $key, $value := .Values.image.env }}
+            - name: {{ $key }}
+              value: {{ $value }}
+            {{- end }}
           volumeMounts:
             - name: data
               mountPath: /data/
