--- a/charts/meep-mon-engine/values.yaml
+++ b/charts/meep-mon-engine/values.yaml
@@ -21,6 +21,10 @@ image:
   repository: meep-mon-engine
   tag: latest
   pullPolicy: Always
+  env:
+    MEEP_DEPENDENCY_PODS: ""
+    MEEP_CORE_PODS: ""
+    MEEP_SANDBOX_PODS: "meep-loc-serv,meep-test"
 
 service:
   type: ClusterIP
