--- a/charts/meep-mon-engine/values.yaml
+++ b/charts/meep-mon-engine/values.yaml
@@ -22,9 +22,10 @@ image:
   tag: latest
   pullPolicy: Always
   env:
+    # Provide comma-spearated list of expected pods to be monitored
     MEEP_DEPENDENCY_PODS: ""
     MEEP_CORE_PODS: ""
-    MEEP_SANDBOX_PODS: "meep-loc-serv,meep-test"
+    MEEP_SANDBOX_PODS: ""
 
 service:
   type: ClusterIP
