--- a/charts/postgis/templates/storageclass.yaml
+++ b/charts/postgis/templates/storageclass.yaml
@@ -2,9 +2,9 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: {{ template "postgis.fullname" . }}
+  name: {{ template "postgresql.fullname" . }}
   labels:
-    app: {{ template "postgis.name" . }}
+    app: {{ template "postgresql.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
