--- a/charts/postgis/templates/storageclass.yaml
+++ b/charts/postgis/templates/storageclass.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.persistentVolume.enabled}}
+{{- if .Values.persistence.enabled}}
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
