--- a/charts/postgis/templates/statefulset.yaml
+++ b/charts/postgis/templates/statefulset.yaml
@@ -430,29 +430,10 @@ spec:
         - name: data
           persistentVolumeClaim:
 {{- with .Values.persistence.existingClaim }}
-            #claimName: {{ tpl . $ }}
-            claimName: {{ template "postgresql.fullname" . }}
+            claimName: {{ tpl . $ }}
 {{- end }}
 {{- else if not .Values.persistence.enabled }}
         - name: data
           emptyDir: {}
-{{- else if and .Values.persistence.enabled (not .Values.persistence.existingClaim) }}
-  volumeClaimTemplates:
-    - metadata:
-        name: data
-      {{- with .Values.persistence.annotations }}
-        annotations:
-        {{- range $key, $value := . }}
-          {{ $key }}: {{ $value }}
-        {{- end }}
-      {{- end }}
-      spec:
-        accessModes:
-        {{- range .Values.persistence.accessModes }}
-          - {{ . | quote }}
-        {{- end }}
-        resources:
-          requests:
-            storage: {{ .Values.persistence.size | quote }}
-        {{ include "postgresql.storageClass" . }}
 {{- end }}
+
