sandbox pod monitoring in frontend + enable/disable pod monitoring in repo cfg file

--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-version: 1.4.3
+version: 1.4.4
 repo:
   name: AdvantEDGE
 
@@ -31,6 +31,7 @@ repo:
           - -mod=vendor
         codecov: true
         lint: true
+        monitor: true
         api: go-apps/meep-mon-engine/api/swagger.yaml
       meep-platform-ctrl:
         src: go-apps/meep-platform-ctrl
@@ -38,6 +39,7 @@ repo:
         chart: charts/meep-platform-ctrl
         codecov: true
         lint: true
+        monitor: true
         api: go-apps/meep-platform-ctrl/api/swagger.yaml
         docker-data:
           swagger: bin/meep-platform-swagger-ui
@@ -48,6 +50,7 @@ repo:
         chart: charts/meep-virt-engine
         codecov: true
         lint: true
+        monitor: true
         docker-data:
           'entrypoint.sh': go-apps/meep-virt-engine/entrypoint.sh
           meep-loc-serv: charts/meep-loc-serv
@@ -65,6 +68,7 @@ repo:
           - -mod=vendor
         codecov: false
         lint: true
+        monitor: true
 
     # Javascript Applications
     js-apps:
@@ -113,6 +117,7 @@ repo:
           - -mod=vendor
         codecov: false
         lint: true
+        monitor: true
         api: go-apps/meep-loc-serv/api/swagger.yaml
       meep-metrics-engine:
         src: go-apps/meep-metrics-engine
@@ -122,6 +127,7 @@ repo:
           - -mod=vendor
         codecov: false
         lint: true
+        monitor: true
         api: go-apps/meep-metrics-engine/api/v2/swagger.yaml
       meep-mg-manager:
         src: go-apps/meep-mg-manager
@@ -129,6 +135,7 @@ repo:
         chart: charts/meep-mg-manager
         codecov: false
         lint: true
+        monitor: true
         api: go-apps/meep-mg-manager/api/swagger.yaml
       meep-rnis:
         src: go-apps/meep-rnis
@@ -138,6 +145,7 @@ repo:
           - -mod=vendor
         codecov: false
         lint: true
+        monitor: true
         api: go-apps/meep-rnis/api/swagger.yaml
       meep-sandbox-ctrl:
         src: go-apps/meep-sandbox-ctrl
@@ -145,6 +153,7 @@ repo:
         chart: charts/meep-sandbox-ctrl
         codecov: false
         lint: true
+        monitor: true
         api: go-apps/meep-sandbox-ctrl/api/swagger.yaml
         docker-data:
           'entrypoint.sh': go-apps/meep-sandbox-ctrl/entrypoint.sh
@@ -155,11 +164,13 @@ repo:
         chart: charts/meep-tc-engine
         codecov: false
         lint: true
+        monitor: true
       meep-tc-sidecar:
         src: go-apps/meep-tc-sidecar
         bin: bin/meep-tc-sidecar
         codecov: false
         lint: true
+        monitor: false
 
   #------------------------------
   #  Dependencies
@@ -167,22 +178,31 @@ repo:
   dep:
     meep-couchdb:
       chart: charts/couchdb
+      monitor: true
     meep-docker-registry:
       chart: charts/docker-registry
+      monitor: true
     meep-grafana:
       chart: charts/grafana
+      monitor: true
     meep-influxdb:
       chart: charts/influxdb
+      monitor: true
     meep-kube-state-metrics:
       chart: charts/kube-state-metrics
+      monitor: true
     meep-ingress:
       chart: charts/nginx-ingress
+      monitor: true
     meep-redis:
       chart: charts/redis
+      monitor: true
     meep-open-map-tiles:
       chart: charts/open-map-tiles
+      monitor: true
     meep-postgis:
       chart: charts/postgis
+      monitor: true
 
   #------------------------------
   #  Packages
