--- a/charts/open-map-tiles/values.yaml
+++ b/charts/open-map-tiles/values.yaml
@@ -54,4 +54,12 @@ persistentVolumeClaim:
   size: "10Gi"
   storageClass: "fullname"
 
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: node-role.kubernetes.io/master
+          operator: Exists
+
 meepOrigin: core
