--- a/charts/postgis/values.yaml
+++ b/charts/postgis/values.yaml
@@ -129,7 +129,7 @@ postgresqlUsername: postgres
 ## PostgreSQL password
 ## ref: https://github.com/bitnami/bitnami-docker-postgresql/blob/master/README.md#setting-the-root-password-on-first-run
 ##
-# postgresqlPassword:
+postgresqlPassword: "pwd"
 
 ## PostgreSQL password using existing secret
 ## existingSecret: secret
