--- a/charts/meep-gis-engine/values-template.yaml
+++ b/charts/meep-gis-engine/values-template.yaml
@@ -8,14 +8,6 @@ deployment:
   replicas: 1
   port: 80
   protocol: TCP
-
-affinity:
-  nodeAffinity:
-    requiredDuringSchedulingIgnoredDuringExecution:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: node-role.kubernetes.io/master
-          operator: Exists
           
 image:
   repository: meep-docker-registry:30001/meep-gis-engine
@@ -29,7 +21,38 @@ service:
   type: ClusterIP
   port: 80
 
+ingress:
+  enabled: true
+
+  # Used to create an Ingress record.
+  hosts:
+    - name: ''
+      paths:
+        - /{{ .SandboxName }}/gis
+
+  annotations:
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+    # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^/{{ .SandboxName }}/gis(/|$)(.*)$ /gis/$2 break;
+
+  labels: {}
+  tls:
+    # Secrets must be manually created in the namespace.
+    # - secretName: chart-example-tls
+    #   hosts:
+    #     - chart-example.local
+
 codecov:
   enabled: false
   
 meepOrigin: core
+
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: node-role.kubernetes.io/master
+          operator: Exists
