map view fixes in exec tab

--- a/js-apps/meep-frontend/package.json
+++ b/js-apps/meep-frontend/package.json
@@ -45,6 +45,7 @@
     "d3": "^5.9.7",
     "d3-force": "^2.0.1",
     "d3-hierarchy": "^1.1.8",
+    "deep-equal": "2.0.3",
     "jquery": "3.3.1",
     "leaflet": "1.6.0",
     "lodash": "^4.17.11",
