--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -108,6 +108,7 @@ repo:
           meep-platform-ctrl-api: js-packages/meep-platform-ctrl-client
           meep-sandbox-ctrl-api: js-packages/meep-sandbox-ctrl-client
           meep-mon-engine-api: js-packages/meep-mon-engine-client
+          meep-metrics-engine-api: js-packages/meep-metrics-engine-client
       meep-platform-swagger-ui:
         src: js-apps/meep-swagger-ui
         bin: bin/meep-platform-swagger-ui
@@ -316,3 +317,7 @@ repo:
       meep-sandbox-ctrl-client:
         src: js-packages/meep-sandbox-ctrl-client
         lint: false
+      meep-metrics-engine-client:
+        src: js-packages/meep-metrics-engine-client
+        lint: false
+
