--- a/js-apps/meep-frontend/package.json
+++ b/js-apps/meep-frontend/package.json
@@ -58,6 +58,7 @@
     "react-redux": "^5.1.1",
     "react-split-pane": "^0.1.87",
     "react-tooltip": "^3.10.0",
+    "react-virtualized": "^9.21.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
