--- a/charts/meep-platform-ctrl/templates/deployment.yaml
+++ b/charts/meep-platform-ctrl/templates/deployment.yaml
@@ -22,11 +22,21 @@ spec:
         meepOrigin: {{ .Values.meepOrigin }}
     spec:
       serviceAccountName: {{ .Values.serviceAccount }}
-      {{- if .Values.codecov.enabled}}
       volumes:
+      {{- if .Values.codecov.enabled}}
         - name: codecov-storage
           persistentVolumeClaim:
             claimName: meep-platform-ctrl-codecov-pvc
+      {{- end}}
+      {{- if .Values.user.frontend.enabled}}
+        - name: user-frontend-storage
+          persistentVolumeClaim:
+            claimName: meep-platform-ctrl-user-frontend-pvc
+      {{- end}}
+      {{- if .Values.user.swagger.enabled}}
+        - name: user-swagger-storage
+          persistentVolumeClaim:
+            claimName: meep-platform-ctrl-user-swagger-pvc
       {{- end}}
       containers:
         - name: {{ .Chart.Name }}
@@ -39,14 +49,38 @@ spec:
           ports:
             - containerPort: {{ .Values.deployment.port }}
               protocol: {{ .Values.deployment.protocol }}
-          {{- if .Values.codecov.enabled}}
+            {{- if .Values.altService.enabled}}
+            - containerPort: {{ .Values.deployment.altPort }}
+              protocol: {{ .Values.deployment.protocol }}
+            {{- end}}
+          env:
+            {{- if .Values.user.frontend.enabled}}
+            - name: USER_FRONTEND
+              value: {{ .Values.user.frontend.mountpath }}
+            {{- end }}
+            {{- if .Values.user.swagger.enabled}}
+            - name: USER_SWAGGER
+              value: {{ .Values.user.swagger.mountpath }}
+            {{- end }}
+            {{- if .Values.altService.enabled}}
+            - name: ALT_SERVICE_PORT
+              value: "{{ .Values.deployment.altPort }}"
+            {{- end}}
           volumeMounts:
-          - name: codecov-storage
-            mountPath: /codecov
+          {{- if .Values.codecov.enabled}}
+            - name: codecov-storage
+              mountPath: /codecov
+          {{- end}}
+          {{- if .Values.user.frontend.enabled}}
+            - name: user-frontend-storage
+              mountPath: {{ .Values.user.frontend.mountpath }}
+          {{- end}}
+          {{- if .Values.user.swagger.enabled}}
+            - name: user-swagger-storage
+              mountPath: {{ .Values.user.swagger.mountpath }}
           {{- end}}
       terminationGracePeriodSeconds: 5
       {{- if .Values.affinity }}
       affinity:
 {{ toYaml .Values.affinity | indent 8 }}
       {{- end }}
-
