--- a/charts/meep-gis-engine/values-template.yaml
+++ b/charts/meep-gis-engine/values-template.yaml
@@ -8,14 +8,14 @@ deployment:
   replicas: 1
   port: 80
   protocol: TCP
-          
+
 image:
   repository: meep-docker-registry:30001/meep-gis-engine
   tag: latest
   pullPolicy: Always
   env:
     MEEP_SANDBOX_NAME: {{ .SandboxName }}
-    
+
 service:
   name: meep-gis-engine
   type: ClusterIP
@@ -23,20 +23,37 @@ service:
 
 ingress:
   enabled: true
-
   # Used to create an Ingress record.
   hosts:
     - name: ''
       paths:
         - /{{ .SandboxName }}/gis
-
   annotations:
-    # kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^/{{ .SandboxName }}/gis(/|$)(.*)$ /gis/$2 break;
+  labels: {}
+  tls:
+    # Secrets must be manually created in the namespace.
+    # - secretName: chart-example-tls
+    #   hosts:
+    #     - chart-example.local
 
+altIngress:
+  enabled: {{ .AltServer }}
+  # Used to create an Ingress record.
+  hosts:
+    - name: ''
+      paths:
+        - /{{ .SandboxName }}/gis
+  annotations:
+    kubernetes.io/ingress.class: alt-nginx
+    # kubernetes.io/tls-acme: "true"
+    # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^/{{ .SandboxName }}/gis(/|$)(.*)$ /gis/$2 break;
   labels: {}
   tls:
     # Secrets must be manually created in the namespace.
@@ -46,7 +63,7 @@ ingress:
 
 codecov:
   enabled: false
-  
+
 meepOrigin: core
 
 affinity:
