--- a/charts/meep-loc-serv/values-template.yaml
+++ b/charts/meep-loc-serv/values-template.yaml
@@ -24,20 +24,37 @@ service:
 
 ingress:
   enabled: true
-
   # Used to create an Ingress record.
   hosts:
     - name: ''
       paths:
         - /{{ .SandboxName }}/location
-
   annotations:
-    # kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^/{{ .SandboxName }}/location(/|$)(.*)$ /location/$2 break;
+  labels: {}
+  tls:
+    # Secrets must be manually created in the namespace.
+    # - secretName: chart-example-tls
+    #   hosts:
+    #     - chart-example.local
 
+altIngress:
+  enabled: {{ .AltServer }}
+  # Used to create an Ingress record.
+  hosts:
+    - name: ''
+      paths:
+        - /{{ .SandboxName }}/location
+  annotations:
+    kubernetes.io/ingress.class: alt-nginx
+    # kubernetes.io/tls-acme: "true"
+    # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^/{{ .SandboxName }}/location(/|$)(.*)$ /location/$2 break;
   labels: {}
   tls:
     # Secrets must be manually created in the namespace.
