--- a/charts/meep-mg-manager/values-template.yaml
+++ b/charts/meep-mg-manager/values-template.yaml
@@ -16,14 +16,14 @@ affinity:
       - matchExpressions:
         - key: node-role.kubernetes.io/master
           operator: Exists
-          
+
 image:
   repository: meep-docker-registry:30001/meep-mg-manager
   tag: latest
   pullPolicy: Always
   env:
     MEEP_SANDBOX_NAME: {{ .SandboxName }}
-    
+
 service:
   name: meep-mg-manager
   type: ClusterIP
@@ -31,27 +31,44 @@ service:
 
 ingress:
   enabled: true
-
   # Used to create an Ingress record.
   hosts:
     - name: ''
       paths:
         - /{{ .SandboxName }}/mgm
-
   annotations:
-    # kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^/{{ .SandboxName }}/mgm(/|$)(.*)$ /mgm/$2 break;
-
   labels: {}
   tls:
     # Secrets must be manually created in the namespace.
     # - secretName: chart-example-tls
     #   hosts:
     #     - chart-example.local
-    
+
+altIngress:
+  enabled: {{ .AltServer }}
+  # Used to create an Ingress record.
+  hosts:
+    - name: ''
+      paths:
+        - /{{ .SandboxName }}/mgm
+  annotations:
+    kubernetes.io/ingress.class: alt-nginx
+    # kubernetes.io/tls-acme: "true"
+    # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^/{{ .SandboxName }}/mgm(/|$)(.*)$ /mgm/$2 break;
+  labels: {}
+  tls:
+    # Secrets must be manually created in the namespace.
+    # - secretName: chart-example-tls
+    #   hosts:
+    #     - chart-example.local
+
 codecov:
   enabled: false
 
