--- a/charts/meep-mon-engine/values.yaml
+++ b/charts/meep-mon-engine/values.yaml
@@ -16,7 +16,7 @@ affinity:
       - matchExpressions:
         - key: node-role.kubernetes.io/master
           operator: Exists
-          
+
 image:
   repository: meep-mon-engine
   tag: latest
@@ -33,15 +33,27 @@ service:
 
 ingress:
   enabled: true
-
   # Used to create an Ingress record.
   hosts:
     - name: ''
       paths:
         - /mon-engine
-
   annotations:
-    # kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+    # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    # nginx.ingress.kubernetes.io/configuration-snippet: |
+    #   rewrite ^(/api)$ $1/ redirect;
+
+altIngress:
+  enabled: false
+  # Used to create an Ingress record.
+  hosts:
+    - name: ''
+      paths:
+        - /mon-engine
+  annotations:
+    kubernetes.io/ingress.class: alt-nginx
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
     # nginx.ingress.kubernetes.io/configuration-snippet: |
