--- a/charts/meep-platform-ctrl/values.yaml
+++ b/charts/meep-platform-ctrl/values.yaml
@@ -8,6 +8,7 @@ deployment:
   replicas: 1
   port: 80
   protocol: TCP
+  altPort: 8080
 
 affinity:
   nodeAffinity:
@@ -16,7 +17,7 @@ affinity:
       - matchExpressions:
         - key: node-role.kubernetes.io/master
           operator: Exists
-          
+
 image:
   repository: meep-platform-ctrl
   tag: latest
@@ -26,9 +27,14 @@ service:
   type: ClusterIP
   port: 80
 
+# secondary server
+altService:
+  enabled: false
+  type: ClusterIP
+  port: 8080
+
 ingress:
   enabled: true
-
   # Used to create an Ingress record.
   hosts:
     - name: ''
@@ -36,14 +42,35 @@ ingress:
         - /
         - /api
         - /platform-ctrl
-
   annotations:
-    # kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
     # nginx.ingress.kubernetes.io/configuration-snippet: |
     #   rewrite ^(/api)$ $1/ redirect;
+  labels: {}
+  tls:
+    # Secrets must be manually created in the namespace.
+    # - secretName: chart-example-tls
+    #   hosts:
+    #     - chart-example.local
 
+# secondary server ingress
+altIngress:
+  enabled: false
+  # Used to create an Ingress record.
+  hosts:
+    - name: ''
+      paths:
+        - /
+        - /api
+        - /platform-ctrl
+  annotations:
+    kubernetes.io/ingress.class: alt-nginx
+    # kubernetes.io/tls-acme: "true"
+    # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    # nginx.ingress.kubernetes.io/configuration-snippet: |
+    #   rewrite ^(/api)$ $1/ redirect;
   labels: {}
   tls:
     # Secrets must be manually created in the namespace.
@@ -53,5 +80,17 @@ ingress:
 
 codecov:
   enabled: false
+  location: "<WORKDIR>/codecov/meep-platform-ctrl"
+
+user:
+  frontend:
+    enabled: false
+    location: "<WORKDIR>/user/frontend"
+    mountpath: "/user-frontend"
+
+  swagger:
+    enabled: false
+    location: "<WORKDIR>/user/swagger"
+    mountpath: "/user-swagger"
 
 meepOrigin: core
