--- a/charts/meep-sandbox-ctrl/values-template.yaml
+++ b/charts/meep-sandbox-ctrl/values-template.yaml
@@ -16,7 +16,7 @@ affinity:
       - matchExpressions:
         - key: node-role.kubernetes.io/master
           operator: Exists
-          
+
 image:
   repository: meep-docker-registry:30001/meep-sandbox-ctrl
   tag: latest
@@ -31,23 +31,44 @@ service:
 
 ingress:
   enabled: true
-
   # Used to create an Ingress record.
   hosts:
     - name: ''
       paths:
         - /{{ .SandboxName }}/api
         - /{{ .SandboxName }}/sandbox-ctrl
-
   annotations:
-    # kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^/{{ .SandboxName }}/api$ /{{ .SandboxName }}/api/ permanent;
       rewrite ^/{{ .SandboxName }}/api(/|$)(.*)$ /api/$2 break;
       rewrite ^/{{ .SandboxName }}/sandbox-ctrl(/|$)(.*)$ /sandbox-ctrl/$2 break;
+  labels: {}
+  tls:
+    # Secrets must be manually created in the namespace.
+    # - secretName: chart-example-tls
+    #   hosts:
+    #     - chart-example.local
 
+# use when alt-server is enabled
+altIngress:
+  enabled: {{ .AltServer }}
+  # Used to create an Ingress record.
+  hosts:
+    - name: ''
+      paths:
+        - /{{ .SandboxName }}/api
+        - /{{ .SandboxName }}/sandbox-ctrl
+  annotations:
+    kubernetes.io/ingress.class: alt-nginx
+    # kubernetes.io/tls-acme: "true"
+    # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^/{{ .SandboxName }}/api$ /{{ .SandboxName }}/api/ permanent;
+      rewrite ^/{{ .SandboxName }}/api(/|$)(.*)$ /api/$2 break;
+      rewrite ^/{{ .SandboxName }}/sandbox-ctrl(/|$)(.*)$ /sandbox-ctrl/$2 break;
   labels: {}
   tls:
     # Secrets must be manually created in the namespace.
