--- a/charts/open-map-tiles/values.yaml
+++ b/charts/open-map-tiles/values.yaml
@@ -29,7 +29,26 @@ ingress:
         - /data
         - /leaflet-hash
   annotations:
-    # kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+    # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+     rewrite ^/map(/|$)(.*)$ /$2 break;
+
+altIngress:
+  enabled: false
+  # Used to create an Ingress record.
+  hosts:
+    - name: ''
+      paths:
+        - /map
+        - /styles
+        - /images
+        - /fonts
+        - /data
+        - /leaflet-hash
+  annotations:
+    kubernetes.io/ingress.class: alt-nginx
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/configuration-snippet: |
