frontend fixes + playbook updates

--- a/playbooks/ansible.cfg
+++ b/playbooks/ansible.cfg
@@ -7,6 +7,8 @@ pipelining = True
 host_key_checking = False
 deprecation_warnings = False
 callback_whitelist = profile_tasks
+ask_pass = True
 
 [privilege_escalation]
 become = True
+become_ask_pass = True
