--- a/playbooks/hosts.ini
+++ b/playbooks/hosts.ini
@@ -1,10 +1,10 @@
 # AdvantEDGE cluster master node
 [master]
-master1 ansible_host=<master IP addr> ansible_user=<username>
+#master1 ansible_host=<master IP addr> ansible_user=<username>
 
 # AdvantEDGE cluster worker nodes
 [worker]
-worker1 ansible_host=<worker IP addr> ansible_user=<username>
+#worker1 ansible_host=<worker IP addr> ansible_user=<username>
 #worker2 ansible_host=<worker IP addr> ansible_user=<username>
 
 # All cluster nodes (master + worker)
